--- a/mystyle.css
+++ b/mystyle.css
@@ -13,7 +13,7 @@ h1:hover {
   background-color: rgb(100, 100, 255);
   color: white;
 }
-#message-box {
+.message-box {
   background-color: bisque;
   padding: 20px;
   text-align: center;
